
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/type.proto";

message so_reportList {
	uint64                      uuid                 =      1;
    uint32                      reported_times       =      2;
    repeated                      int32                     tags                 =      3;
    bool                        is_arbitrated        =      4;
      
}


message so_list_reportList_by_reported_times {
	uint32                   	reported_times   = 1;
	uint64                   	uuid             = 2;
}


message so_unique_reportList_by_uuid {
	uint64                   	uuid             = 1;
}
